--- a/GingerLove/MyFirst.html
+++ b/GingerLove/MyFirst.html
@@ -12,7 +12,7 @@
         <h3> Ginger is a spicy root used in cooking and medicine. <br> It adds flavor to dishes and helps with digestion, nausea, and inflammation. <br>
              You can use it fresh, dried, or powdered in teas, soups, and more.<br>
              It's also a common remedy for colds and upset stomachs.</h3> <br> <br>
-        <img src="C:\Users\Code\OneDrive\Desktop\PicturesForNewWebsite/ginger.jpg" height="250" alt="GingerRoot" title="Ginger Root"> 
+        <img src="GingerLove/ginger.jpg" height="250" alt="GingerRoot" title="Ginger Root"> 
         <h3> You can use ginger both fresh for a zesty kick or dried for a more concentrated, warm flavor. </h3> <br> <br>
         <img src="C:\Users\Code\OneDrive\Desktop\PicturesForNewWebsite/GingerLemonTee.jpg" height="250" alt="Ginger Lemon" title="Ginger&Lemon">    
         <h3>Ginger and lemon are a perfect combination, offering a refreshing blend of warmth and tanginess. <br>
